crates/pgls_pretty_print/tests/snapshots/multi/tests__conversion_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/conversion.sql
snapshot_kind: text
---
CREATE FUNCTION test_enc_setup()
RETURNS VOID
AS 'regresslib', 'test_enc_setup'
LANGUAGE "c"
STRICT;

SELECT FROM test_enc_setup();

CREATE FUNCTION test_enc_conversion(BYTEA, NAME, NAME, BOOLEAN, OUT validlen INT, OUT result BYTEA)
AS 'regresslib', 'test_enc_conversion'
LANGUAGE "c"
STRICT;

CREATE USER regress_conversion_user NOCREATEDB NOCREATEROLE;

SET SESSION AUTHORIZATION regress_conversion_user;

CREATE CONVERSION myconv FOR 'LATIN1' TO 'UTF8' FROM iso8859_1_to_utf8;

CREATE CONVERSION myconv FOR 'LATIN1' TO 'UTF8' FROM iso8859_1_to_utf8;

CREATE DEFAULT CONVERSION public.mydef FOR 'LATIN1' TO 'UTF8' FROM iso8859_1_to_utf8;

CREATE DEFAULT CONVERSION public.mydef2 FOR 'LATIN1' TO 'UTF8' FROM iso8859_1_to_utf8;

COMMENT ON CONVERSION myconv_bad IS 'foo';

COMMENT ON CONVERSION myconv IS 'bar';

COMMENT ON CONVERSION myconv IS NULL;

DROP CONVERSION "myconv";

DROP CONVERSION "mydef";

RESET session_authorization;

DROP ROLE regress_conversion_user;

CREATE OR REPLACE FUNCTION
test_conv(
  IN input BYTEA,
  IN src_encoding TEXT,
  IN dst_encoding TEXT,
  OUT result BYTEA,
  OUT errorat BYTEA,
  OUT error TEXT
)
LANGUAGE "plpgsql"
AS '
declare
  validlen int;
begin
  -- First try to perform the conversion with noError = false. If that errors out,
  -- capture the error message, and try again with noError = true. The second call
  -- should succeed and return the position of the error, return that too.
  begin
    select * into validlen, result from test_enc_conversion(input, src_encoding, dst_encoding, false);
    errorat = NULL;
    error := NULL;
  exception when others then
    error := sqlerrm;
    select * into validlen, result from test_enc_conversion(input, src_encoding, dst_encoding, true);
    errorat = substr(input, validlen + 1);
  end;
  return;
end;
';

CREATE TABLE utf8_verification_inputs (
  inbytes BYTEA,
  description TEXT PRIMARY KEY
);

INSERT INTO utf8_verification_inputs
VALUES
  ('\x66006f', 'NUL byte'),
  ('\xaf', 'bare continuation'),
  ('\xc5', 'missing second byte in 2-byte char'),
  ('\xc080', 'smallest 2-byte overlong'),
  ('\xc1bf', 'largest 2-byte overlong'),
  ('\xc280', 'next 2-byte after overlongs'),
  ('\xdfbf', 'largest 2-byte'),
  ('\xe9af', 'missing third byte in 3-byte char'),
  ('\xe08080', 'smallest 3-byte overlong'),
  ('\xe09fbf', 'largest 3-byte overlong'),
  ('\xe0a080', 'next 3-byte after overlong'),
  ('\xed9fbf', 'last before surrogates'),
  ('\xeda080', 'smallest surrogate'),
  ('\xedbfbf', 'largest surrogate'),
  ('\xee8080', 'next after surrogates'),
  ('\xefbfbf', 'largest 3-byte'),
  ('\xf1afbf', 'missing fourth byte in 4-byte char'),
  ('\xf0808080', 'smallest 4-byte overlong'),
  ('\xf08fbfbf', 'largest 4-byte overlong'),
  ('\xf0908080', 'next 4-byte after overlong'),
  ('\xf48fbfbf', 'largest 4-byte'),
  ('\xf4908080', 'smallest too large'),
  ('\xfa9a9a8a8a', '5-byte');

SELECT description, (test_conv(inbytes, 'utf8', 'utf8')).* FROM utf8_verification_inputs;

WITH
test_bytes
AS (
  SELECT
    inbytes,
    description,
    (test_conv(
      inbytes || CAST(repeat('.', 3) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    utf8_verification_inputs
),
test_padded
AS (
  SELECT
    description,
    (test_conv(
      inbytes || CAST(repeat('.', 64) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    test_bytes
)
SELECT
  description,
  b.error AS orig_error,
  p.error AS error_after_padding
FROM
  test_padded AS p
  INNER JOIN
    test_bytes AS b
  USING ("description")
WHERE
  p.error IS DISTINCT FROM b.error
ORDER BY description;

WITH
test_bytes
AS (
  SELECT
    inbytes,
    description,
    (test_conv(
      inbytes || CAST(repeat('.', 3) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    utf8_verification_inputs
),
test_padded
AS (
  SELECT
    description,
    (test_conv(
      CAST(repeat('.', 64 - length(inbytes)) AS BYTEA) ||
      inbytes ||
      CAST(repeat('.', 64) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    test_bytes
)
SELECT
  description,
  b.error AS orig_error,
  p.error AS error_after_padding
FROM
  test_padded AS p
  INNER JOIN
    test_bytes AS b
  USING ("description")
WHERE
  p.error IS DISTINCT FROM b.error
ORDER BY description;

WITH
test_bytes
AS (
  SELECT
    inbytes,
    description,
    (test_conv(
      inbytes || CAST(repeat('.', 3) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    utf8_verification_inputs
),
test_padded
AS (
  SELECT
    description,
    (test_conv(
      CAST(repeat('.', 64) AS BYTEA) || inbytes ||
      CAST(repeat('.', 3) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    test_bytes
)
SELECT
  description,
  b.error AS orig_error,
  p.error AS error_after_padding
FROM
  test_padded AS p
  INNER JOIN
    test_bytes AS b
  USING ("description")
WHERE
  p.error IS DISTINCT FROM b.error
ORDER BY description;

WITH
test_bytes
AS (
  SELECT
    inbytes,
    description,
    (test_conv(
      inbytes || CAST(repeat('.', 3) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    utf8_verification_inputs
),
test_padded
AS (
  SELECT
    description,
    (test_conv(
      CAST(repeat('.', 64 - length(inbytes)) AS BYTEA) ||
      inbytes ||
      CAST(repeat('.', 3) AS BYTEA),
      'utf8',
      'utf8'
    )).error
  FROM
    test_bytes
)
SELECT
  description,
  b.error AS orig_error,
  p.error AS error_after_padding
FROM
  test_padded AS p
  INNER JOIN
    test_bytes AS b
  USING ("description")
WHERE
  p.error IS DISTINCT FROM b.error
ORDER BY description;

CREATE TABLE utf8_inputs (
  inbytes BYTEA,
  description TEXT
);

INSERT INTO utf8_inputs
VALUES
  ('\x666f6f', 'valid, pure ASCII'),
  ('\xc3a4c3b6', 'valid, extra latin chars'),
  ('\xd184d0bed0be', 'valid, cyrillic'),
  ('\x666f6fe8b1a1', 'valid, kanji/Chinese'),
  (
    '\xe382abe3829a',
    'valid, two chars that combine to one in EUC_JIS_2004'
  ),
  (
    '\xe382ab',
    'only first half of combined char in EUC_JIS_2004'
  ),
  (
    '\xe382abe382',
    'incomplete combination when converted EUC_JIS_2004'
  ),
  ('\xecbd94eb81bceba6ac', 'valid, Hangul, Korean'),
  (
    '\x666f6fefa8aa',
    'valid, needs mapping function to convert to GB18030'
  ),
  ('\x66e8b1ff6f6f', 'invalid byte sequence'),
  ('\x66006f', 'invalid, NUL byte'),
  ('\x666f6fe8b100', 'invalid, NUL byte'),
  ('\x666f6fe8b1', 'incomplete character at end');

SELECT description, (test_conv(inbytes, 'utf8', 'utf8')).* FROM utf8_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'utf8', 'euc_jis_2004')).* FROM utf8_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'utf8', 'latin1')).* FROM utf8_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'utf8', 'latin2')).* FROM utf8_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'utf8', 'latin5')).* FROM utf8_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'utf8', 'koi8r')).* FROM utf8_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'utf8', 'gb18030')).* FROM utf8_inputs;

CREATE TABLE euc_jis_2004_inputs (
  inbytes BYTEA,
  description TEXT
);

INSERT INTO euc_jis_2004_inputs
VALUES
  ('\x666f6f', 'valid, pure ASCII'),
  ('\x666f6fbedd', 'valid'),
  (
    '\xa5f7', 'valid, translates to two UTF-8 chars '
  ),
  ('\xbeddbe', 'incomplete char '),
  ('\x666f6f00bedd', 'invalid, NUL byte'),
  ('\x666f6fbe00dd', 'invalid, NUL byte'),
  ('\x666f6fbedd00', 'invalid, NUL byte'),
  ('\xbe04', 'invalid byte sequence');

SELECT
  description,
  inbytes,
  (test_conv(inbytes, 'euc_jis_2004', 'euc_jis_2004')).*
FROM
  euc_jis_2004_inputs;

SELECT
  description,
  inbytes,
  (test_conv(inbytes, 'euc_jis_2004', 'utf8')).*
FROM
  euc_jis_2004_inputs;

CREATE TABLE shiftjis2004_inputs (
  inbytes BYTEA,
  description TEXT
);

INSERT INTO shiftjis2004_inputs
VALUES
  ('\x666f6f', 'valid, pure ASCII'),
  ('\x666f6f8fdb', 'valid'),
  ('\x666f6f81c0', 'valid, no translation to UTF-8'),
  (
    '\x666f6f82f5',
    'valid, translates to two UTF-8 chars '
  ),
  ('\x666f6f8fdb8f', 'incomplete char '),
  (
    '\x666f6f820a',
    'incomplete char, followed by newline '
  ),
  ('\x666f6f008fdb', 'invalid, NUL byte'),
  ('\x666f6f8f00db', 'invalid, NUL byte'),
  ('\x666f6f8fdb00', 'invalid, NUL byte');

SELECT
  description,
  inbytes,
  (test_conv(inbytes, 'shiftjis2004', 'shiftjis2004')).*
FROM
  shiftjis2004_inputs;

SELECT
  description,
  inbytes,
  (test_conv(inbytes, 'shiftjis2004', 'utf8')).*
FROM
  shiftjis2004_inputs;

SELECT
  description,
  inbytes,
  (test_conv(inbytes, 'shiftjis2004', 'euc_jis_2004')).*
FROM
  shiftjis2004_inputs;

CREATE TABLE gb18030_inputs (
  inbytes BYTEA,
  description TEXT
);

INSERT INTO gb18030_inputs
VALUES
  ('\x666f6f', 'valid, pure ASCII'),
  ('\x666f6fcff3', 'valid'),
  (
    '\x666f6f8431a530',
    'valid, no translation to UTF-8'
  ),
  (
    '\x666f6f84309c38',
    'valid, translates to UTF-8 by mapping function'
  ),
  ('\x666f6f84309c', 'incomplete char '),
  (
    '\x666f6f84309c0a',
    'incomplete char, followed by newline '
  ),
  ('\x666f6f84', 'incomplete char at end'),
  ('\x666f6f84309c3800', 'invalid, NUL byte'),
  ('\x666f6f84309c0038', 'invalid, NUL byte');

SELECT
  description,
  inbytes,
  (test_conv(
    CAST(CAST(inbytes AS TEXT) AS BYTEA),
    'gb18030',
    'gb18030'
  )).*
FROM
  gb18030_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'gb18030', 'utf8')).* FROM gb18030_inputs;

CREATE TABLE iso8859_5_inputs (
  inbytes BYTEA,
  description TEXT
);

INSERT INTO iso8859_5_inputs
VALUES
  ('\x666f6f', 'valid, pure ASCII'),
  ('\xe4dede', 'valid'),
  ('\x00', 'invalid, NUL byte'),
  ('\xe400dede', 'invalid, NUL byte'),
  ('\xe4dede00', 'invalid, NUL byte');

SELECT description, inbytes, (test_conv(inbytes, 'iso8859-5', 'iso8859-5')).* FROM iso8859_5_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'iso8859-5', 'utf8')).* FROM iso8859_5_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'iso8859-5', 'koi8r')).* FROM iso8859_5_inputs;

SELECT
  description,
  inbytes,
  (test_conv(inbytes, 'iso8859_5', 'mule_internal')).*
FROM
  iso8859_5_inputs;

CREATE TABLE big5_inputs (
  inbytes BYTEA,
  description TEXT
);

INSERT INTO big5_inputs
VALUES
  ('\x666f6f', 'valid, pure ASCII'),
  ('\x666f6fb648', 'valid'),
  ('\x666f6fa27f', 'valid, no translation to UTF-8'),
  ('\x666f6fb60048', 'invalid, NUL byte'),
  ('\x666f6fb64800', 'invalid, NUL byte');

SELECT description, inbytes, (test_conv(inbytes, 'big5', 'big5')).* FROM big5_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'big5', 'utf8')).* FROM big5_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'big5', 'mule_internal')).* FROM big5_inputs;

CREATE TABLE mic_inputs (
  inbytes BYTEA,
  description TEXT
);

INSERT INTO mic_inputs
VALUES
  ('\x666f6f', 'valid, pure ASCII'),
  ('\x8bc68bcf8bcf', 'valid (in KOI8R)'),
  ('\x8bc68bcf8b', 'invalid,incomplete char'),
  ('\x92bedd', 'valid (in SHIFT_JIS)'),
  ('\x92be', 'invalid, incomplete char)'),
  ('\x666f6f95a3c1', 'valid (in Big5)'),
  ('\x666f6f95a3', 'invalid, incomplete char'),
  ('\x9200bedd', 'invalid, NUL byte'),
  ('\x92bedd00', 'invalid, NUL byte'),
  ('\x8b00c68bcf8bcf', 'invalid, NUL byte');

SELECT
  description,
  inbytes,
  (test_conv(
    inbytes,
    'mule_internal',
    'mule_internal'
  )).*
FROM
  mic_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'mule_internal', 'koi8r')).* FROM mic_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'mule_internal', 'iso8859-5')).* FROM mic_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'mule_internal', 'sjis')).* FROM mic_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'mule_internal', 'big5')).* FROM mic_inputs;

SELECT description, inbytes, (test_conv(inbytes, 'mule_internal', 'euc_jp')).* FROM mic_inputs;
